# ros-quadrotor

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/quadrotor/: gazebo_ros_joint_state_publisher.h
launch/: hector.launch  laserscan_assembler_hector.launch  quadrotor.launch
src/: gazebo_ros_joint_state_publisher.cpp  joint_tilter_controller.cpp  periodic_snapshotter.cpp
urdf/: quadrotor.sdf  quadrotor_base.urdf.xacro  quadrotor_hokuyo_utm30lx.urdf.xacro
urdf/hector/: hector.sdf  hector.urdf  hector_simple.urdf  hector_v0.1.urdf  model.config
urdf/quadrotor/: model.config  quadrotor.urdf
